         Interface I smoke test.
20111221 hacking/peripheral_tests.txt,lib/{Makefile.am,tests/success.udi}: add
	 Beta Disk smoke test.
20111221 hacking/peripheral_tests.txt,lib/{Makefile.am,tests/success.opd}: add
	 Opus smoke test.
20111223 hacking/peripheral_tests.txt,lib/{Makefile.am,tests/success.mgt.bz2}:
	 add +D smoke test (Stuart).
20111223 peripherals/nic/{w5100.c,w5100_socket.c}: things on the socket thread
         can't call ui_error as X11 doesn't like that being called from a
         different thread.
20111223 hacking/valgrind.supp: add valgrind suppressions file for third party
         libraries.
20111223 peripherals/nic/{w5100_internals.h,w5100_socket.c}: make UDP servers
         bind to the right port (Phil/Sergio).
20111230 ui/sdl/sdldisplay.c: modify sdldisplay_find_best_fullscreen_scaler()
         to prevent the search for a suitable fullscreen scaler from becoming
         recursive when there is only one high resolution mode available
         (thanks, Phil Reynolds and Sergio Baldoví) (Fred).
20111230 ui/sdl/sdljoystick.c: shutdown the SDL library properly when using
         SDL joystick support with GTK+ etc. (fixes bug #3467162) (Sergio
         Baldoví).
20120103 configure.in: prefer use of SDL joystick code over libjsw which is
         not maintained (patch #3467163) (Sergio Baldoví).
20120103 ui/gtk/debugger.c: combine identical lines in the GTK+ debugger memory
         map, so we don't display 16 lines if we don't need to.
20120106 peripherals/flash: add .deps and Makefile to the ignore property
         (Fred).
20120106 README: add suggested compiler for Mac OS X (Fred).
20120109 debugger/breakpoint.c: return the correct page when trying to match
	 breakpoints (fixes bug #3470425).
20120109 debugger/breakpoint.c: remove debugging code.
20120109 peripherals/{disk/{beta.c,plusd.c},ide/{zxatasp.c,zxcf.c}: fix up
         mismerged files.
20120109 peripherals/if1.c: one more mismerged file.